made the chat_app between 2 persons

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,10 @@
 cmake_minimum_required(VERSION 3.13)
-project(chat_app)
+project(vsomeip_chat)
 
 find_package(vsomeip3 REQUIRED)
-find_package(Boost REQUIRED)
 
-add_executable(chat_server server/chat_server.cpp)
-add_executable(chat_client client/chat_client.cpp)
+add_executable(chat_user1 user1/chat_user1.cpp)
+target_link_libraries(chat_user1 vsomeip3)
 
-target_link_libraries(chat_server vsomeip3)
-target_link_libraries(chat_client vsomeip3)
+add_executable(chat_user2 user2/chat_user2.cpp)
+target_link_libraries(chat_user2 vsomeip3)
